@@ -6,7 +6,10 @@
 	  and the test
           testsuite/gm2/switches/check-all/run/fail/intrange5.mod
 	  passes.
-	  (m2expr_Build4LogicalAnd)  New function.
+          (m2expr_Build4LogicalAnd)  New function.
+	* gm2/gm2-gcc/m2expr.c:  renamed BuildLogicalAndIf
+          to BuildTruthAndIf and renamed BuildLogicalOrIf
+	  to BuildTruthOrIf.
 
 2018-05-23      Gaius Mulley <gaius.mulley@southwales.ac.uk>
 
